# bitloop

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  VSWorkspaceSettings.json  bitloop.bat  bitloop.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: bitloopConfig.cmake.in  bitloopSimulation.cmake
cmake/imgui/: CMakeLists.txt  imguiConfig.cmake.in
cmake/toolchain/: vcpkg_autodetect.cmake
common/: README.md
common/static/: shell.html
examples/: CMakeLists.txt
examples/Cardioid/: CMakeLists.txt  vcpkg-configuration.json
examples/Cardioid/Cardioid/: Cardioid.cpp  Cardioid.h
examples/ExampleText/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
examples/ExampleText/ExampleText/: ExampleText.cpp  ExampleText.h
examples/ExampleText/cmake/toolchain/: vcpkg_autodetect.cmake
examples/ExampleText/tooling/: findBitloop.cmake
examples/Mandelbrot/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
examples/Mandelbrot/Mandelbrot/: Mandelbrot.cpp  Mandelbrot.h  build_config.h  compute.h  conversions.h  examples.h  kernel.h  mandel_state.h  shading.h  splines.h  state.h  tween.cpp  tween.h  types.h
examples/Mandelbrot/cmake/toolchain/: vcpkg_autodetect.cmake
examples/MandelbrotGallery/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
examples/MandelbrotGallery/MandelbrotGallery/: MandelbrotGallery.cpp  MandelbrotGallery.h
examples/Test1/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json
examples/Test1/Test1/: Test1.cpp  Test1.h
examples/Test2/: CMakeLists.txt  vcpkg-configuration.json
examples/Test2/Test2/: Test2.cpp  Test2.h
examples/Tiger/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json
examples/Tiger/Tiger/: Tiger.cpp  Tiger.h  draw_tiger.h
examples/tooling/toolchain/: vcpkg_autodetect.cmake
framework/: CMakeLists.txt  bitloopConfig.cmake.in  bitloopSimulation.cmake
framework/include/: bitloop.h
framework/include/bitloop/: cpp.hint  emscripten_browser_clipboard.h
framework/include/bitloop/core/: camera.h  config.h  debug.h  event.h  main_window.h  platform.h  project.h  project_worker.h  record_manager.h  threads.h  types.h  var_buffer.h
framework/include/bitloop/graphics/: nano_bitmap.h  nano_canvas.h
framework/include/bitloop/imguix/: imgui_config.h  imgui_custom.h  imgui_gradient_edit.h  imgui_log.h  imgui_splines.h
framework/include/bitloop/nanovgx/: nano_bitmap.h  nano_canvas.h
framework/include/bitloop/platform/: platform.h  platform_macros.h
framework/include/bitloop/ui/: imgui_custom.h  imgui_debug_ui.h
framework/include/bitloop/util/: change_tracker.h  color.h  flt128.h  json.h  math_util.h  text_util.h
framework/include/bitloop/utility/: compression.h  constexpr_dispatch.h  flt128.h  json.h  math_util.h
framework/src/: bitloop.cpp
framework/src/core/: camera.cpp  event.cpp  main_window.cpp  platform.cpp  project.cpp  project_worker.cpp  record_manager.cpp
framework/src/graphics/: nano_canvas.cpp
framework/src/imguix/: imgui_custom.cpp  imgui_gradient_edit.cpp
framework/src/nanovgx/: nano_canvas.cpp
framework/src/platform/: platform.cpp  webm_encode.cpp  webm_encode.txt
framework/src/ui/: imgui_custom.cpp  imgui_gradient_edit.cpp
framework/src/util/: compression.cpp  json.cpp  text_util.cpp
framework/src/utility/: compression.cpp  text_util.cpp
framework/templates/class/: CLASS_NAME.cpp  CLASS_NAME.h
framework/templates/default/: CMakeLists.txt
framework/templates/default/SIM_NAME/: SIM_NAME.cpp  SIM_NAME.h
framework/templates/header/: HEADER_NAME.h
framework/toolchain/: vcpkg_autodetect.cmake
framework/triplets/: wasm32-emscripten-multithreaded.cmake
include/: bitloop.h
include/bitloop/: bl.natvis
scripts/: A_build_production.bat  B_test_production.bat  bootstrap.bat  bootstrap.py  bootstrap.sh  bootstrap_simple.bat  cli.py  instantiate_template.py  new_project.py  new_sim.py  patch_text.bat  rename_sim.py  update_examples_versions.py  web_build_and_deploy.bat  web_build_and_serve_local.bat  web_build_and_serve_local_debug.bat  web_build_and_serve_local_release.bat  web_build_production.bat  web_deploy_production.bat  web_serve_local.bat  web_test_production.bat  windows_open_msvc.bat  windows_update_msvc.bat
scripts/internal/: copy_resources.bat  copy_resources_local.bat  deploy_production.ps1
src/: bitloop.cpp  bitloop_main.cpp  main.cpp  main.h  main_window.cpp  main_window.h
src/core/: BS_thread_pool.hpp  camera.cpp  camera.h  capture_manager.cpp  capture_preprocessor.cpp  config.h  debug.h  encoding.cpp  encoding.h  event.cpp  event.h  helpers.cpp  helpers.h  image_loader.cpp  json.h  layout.cpp  main_window.cpp  math_helpers.h  nanovg_canvas.cpp  nanovg_canvas.h  platform.cpp  platform.h  platform_macros.h  project.cpp  project.h  project_manager.cpp  project_manager.h  project_worker.cpp  project_worker.h  record_manager.cpp  scene.cpp  settings.cpp  threads.cpp  threads.h  types.cpp  types.h  var_buffer.h  viewport.cpp
src/graphics/: nano_bitmap.cpp  nano_bitmap.h  nano_canvas.cpp  nano_canvas.h
src/imguix/: imgui_custom.cpp  imgui_gradient_edit.cpp  imguix.cpp
src/nanovgx/: nano_canvas.cpp  nanovgx.cpp
src/platform/: platform.cpp
src/simulations/: Cardioid.cpp  Cardioid.h  ImageTest.cpp  ImageTest.h  Mandelbrot.cpp  Mandelbrot.h  TestSim.cpp  TestSim.h
src/simulations/ImageTest/: CMakeLists.txt  ImageTest.cpp  ImageTest.h
src/simulations/Mandelbrot/: CMakeLists.txt  Mandelbrot.cpp  Mandelbrot.h
src/ui/: imgui_custom.cpp  imgui_custom.h  imgui_debug_ui.h  imgui_log.h  (+3 more)
static/: bitloop.html  bitloop_local.html
templates/: sim_header.h  sim_source.cpp
templates/default/: CMakeLists.txt  CMakePresets.json  vcpkg.json
templates/default/SIM_NAME/: SIM_NAME.cpp  SIM_NAME.h
templates/default/cmake/toolchain/: vcpkg_autodetect.cmake
templates/default/cmake/triplets/: wasm32-emscripten-multithreaded.cmake
tests/: CMakeLists.txt
tests/unit/utility/: test_compression.cpp  test_math.cpp
(+75 files in other folders)
